Add Refresh Button
OBS 상호작용에서 새로고침 가능한 버튼 추가

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
     <input id="timer-start" type="button" value="Start" onClick="Start()" />
     <input id="timer-stop" type="button" value="Stop" onClick="Stop()" />
+    
+    <input id="refresh" type="button" value="Refresh" onClick="window.location.reload();" />
 
     <script src="timer.js"></script>
 
